--- a/config.json
+++ b/config.json
@@ -10,7 +10,7 @@
   },
   "variations": [
     {
-      "description": "My Custom Plugin",
+      "description": "My Custom Plugin1",
       "url": "index.html",
       "icons": [
         "resources/icon.png"
